Completed support for Ctrl-I, Ctrl-O, and :jumps